[package]
name = "decent-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
libsignal-protocol = { version = "0.1.0", path = "libsignal/rust/protocol" }
tokio = { version = "1.34", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
